# rust-api-project

./: Cargo.toml
src/: main.rs
src/application/: mod.rs  response.rs
src/application/handlers/: health.rs
src/config/: mod.rs
