[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "postgres", "uuid", "chrono"] }
redis = { version = "0.24", features = ["tokio-comp"] }
tracing = "0.1"
tracing-subscriber = "0.3"
config = "0.13"
dotenv = "0.15"
jsonwebtoken = "9.2"
slack-hook = "0.8"
async-trait = "0.1"
thiserror = "1.0"
validator = { version = "0.16", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
test-case = "3.3"